@@ -35,6 +35,7 @@ Fixes:
  * You couldn't @chat on open channels. Reported by Padraic. [MG]
  * Win32 compile fixes by Daniel Powell. [MG]
  * The Open_Anywhere power didn't fully work as intended. Patch by Covenent.
+ * regrab*() functions removed ansi. Reported by Covenent. [MG]
 
 Functions:
  * Restrictions for the beep() function can now be modified with @function.
